--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 
 /* Card Container */
 .card {
+    height: 80%;
     width: 100%;
     max-width: 450px;
     background: #fff;
@@ -28,6 +29,11 @@ body {
     overflow: hidden;
 }
 
+.new{
+    height: 70%;
+    width: 100%;
+}
+
 /* Hover Animation */
 .card:hover {
     transform: translateY(-15px) scale(1.02);
@@ -35,8 +41,9 @@ body {
 }
 
 .profilepic{
-height: 30%;
-width: 100%
+    height: 30%;
+    width: 100%;
+    margin-top: 40px;
 }
 /* Profile Image */
 .profile-img {
@@ -58,7 +65,7 @@ width: 100%
 /* Content Styling */
 .content {
     text-align: center;
-    padding-top: 40px;
+    padding-top: 10px;
 }
 
 h2 {
